# ketzal-validation

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  test_clippy.yml
ketzal-validation/: Cargo.toml
ketzal-validation/src/errors/: validation_error.rs
ketzal-validation/src/registry/: validator_registry.rs
ketzal-validation/src/traits/: mod.rs
ketzal-validation/src/validators/numeric/: max.rs  min.rs  mod.rs
ketzal-validation_macro/: Cargo.toml
ketzal-validation_macro/src/: basic.rs  lib.rs  schema.rs  utils.rs
ketzal_validation/: Cargo.toml  ketzal.yml
ketzal_validation/locales/: en.json  es.json
ketzal_validation/src/: lib.rs
ketzal_validation/src/config/: mod.rs
ketzal_validation/src/errors/: mod.rs  validation_errors.rs
ketzal_validation/src/i18n/: mod.rs
ketzal_validation/src/openapi/schema/: mod.rs  openapi_schema.rs
ketzal_validation/src/registry/: builtins.rs  mod.rs  validator_registry.rs
ketzal_validation/src/traits/: validator.rs
ketzal_validation/src/utils/helpers/: cast.rs  mod.rs  parse_arg_f64.rs  unsupported_type.rs  validate_numeric.rs  validate_threshold.rs
ketzal_validation/src/validators/: mod.rs
ketzal_validation/src/validators/common/: cast.rs  max.rs  min.rs  mod.rs
ketzal_validation/src/validators/numeric/: between.rs  integer.rs  mod.rs  negative.rs  positive.rs
ketzal_validation/src/validators/string/: alpha.rs  email.rs  in.rs  mod.rs  regex.rs
ketzal_validation/test/: mod.rs
ketzal_validation/test/model/: auth_model.rs  in_model.rs  message_model.rs  mod.rs  users_model.rs
ketzal_validation/test/validators/common/: confirmed_test.rs  in_test.rs  max_test.rs  message_test.rs  min_test.rs  mod.rs
ketzal_validations_macro/: Cargo.toml
ketzal_validations_macro/src/: lib.rs  utils.rs
