[package]
name = "ketzal-validation"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
