[package]
name = "ketzal_validation"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ketzal-validation_macro = { path = "../ketzal-validation_macro" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

[[test]]
name = "integration"
path = "test/mod.rs"
