[package]
name = "ketzal_validations_macro"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
[lib]
proc-macro = true
[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
